<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:elevation="0dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:navigationIcon="@null"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/space_12dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/simple_title_bar_text_color"
                android:textSize="@dimen/text_size_16sp"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/action_bar_height"
                android:layout_marginRight="@dimen/action_bar_height"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/schedule_event_detail_setting"
                android:textColor="@color/colorWrite"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvFinish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/space_12dp"
                android:gravity="center"
                android:text="@string/finish"
                android:textColor="@color/simple_title_bar_text_color"
                android:textSize="@dimen/text_size_16sp"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>